[gd_scene load_steps=12 format=3 uid="uid://cha5j6t3iahah"]

[ext_resource type="Script" uid="uid://ccrw7r2cy63ox" path="res://scripts/level_5.gd" id="1_7pj42"]
[ext_resource type="Texture2D" uid="uid://cme6x81kk03n3" path="res://assets/Tilemap/monochrome_tilemap.png" id="2_thmvh"]
[ext_resource type="Script" uid="uid://b3hq3hrfs73kg" path="res://scripts/camera_2d_level_5.gd" id="3_g54xt"]
[ext_resource type="Texture2D" uid="uid://bmbrdlivx46og" path="res://assets/sprites/vec_B.png" id="4_teump"]
[ext_resource type="FontFile" uid="uid://caymmx2pqsuqc" path="res://assets/fonts/TypeLightSans-KV84p.otf" id="5_oe7sd"]
[ext_resource type="PackedScene" uid="uid://dpwvn1pbypbld" path="res://scenes/win_scene.tscn" id="7_7h48i"]
[ext_resource type="PackedScene" uid="uid://c7f2i3i4covj3" path="res://scenes/game_over_ui.tscn" id="8_35rec"]
[ext_resource type="Texture2D" uid="uid://dp3sb5dibutrx" path="res://assets/sprites/MagneticFieldEq.png" id="9_o0ljq"]
[ext_resource type="PackedScene" uid="uid://y34ajx57mv3b" path="res://scenes/proton_level4.tscn" id="10_su468"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_if4l3"]
texture = ExtResource("2_thmvh")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 3.59718, 5.2159, -8, 8)
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -4.67633, 5.2159)
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.47491, 8, -6.65477, 8, 6.47491, -8, 6.29506)
8:12/0 = 0
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.93534, -8, 5.93534, -8, 5.93534, 8, -5.93534, 8)
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.03604, -5.57562, 8, -6.47491, 8, 8, -5.75548, 8)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.47491, 8, -6.65477, 8, 6.47491, -8, 6.29506)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 3.59718, -4.49647, 8, 8, -8, 8)
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
14:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:17/0 = 0
15:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:17/0 = 0
16:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
14:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:18/0 = 0
15:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:18/0 = 0
16:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
14:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:19/0 = 0
15:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:19/0 = 0
16:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_4038r"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_if4l3")

[node name="Node2D" type="Node2D"]
position = Vector2(2, -4)
script = ExtResource("1_7pj42")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_4038r")
format = 2
layer_0/name = "Background"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(26, 30)
zoom = Vector2(0.33, 0.33)
limit_left = -100000000
limit_top = -100000000
limit_right = 100000000
limit_bottom = 100000000
script = ExtResource("3_g54xt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sliders" type="Node" parent="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Sliders"]
offset_left = 933.0
offset_top = 577.0
offset_right = 970.0
offset_bottom = 630.0
texture = ExtResource("4_teump")
expand_mode = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/Sliders"]
offset_left = 984.0
offset_top = 603.0
offset_right = 1131.0
offset_bottom = 619.0
step = 0.5

[node name="TimeLabel" type="Label" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 18.0
offset_right = 342.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("5_oe7sd")
theme_override_font_sizes/font_size = 30
text = "Time : 0 s"

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 999.0
offset_top = 12.0
offset_right = 1140.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("5_oe7sd")
theme_override_font_sizes/font_size = 30
text = "Score : 0 "

[node name="WinSceneUI" parent="." instance=ExtResource("7_7h48i")]
visible = false

[node name="GameOverUI" parent="." instance=ExtResource("8_35rec")]
visible = false

[node name="TheoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="TheoryUI"]
offset_left = 17.0
offset_top = 9.0
offset_right = 1137.0
offset_bottom = 638.0
color = Color(0, 0.160784, 0.313726, 1)
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="TheoryUI"]
offset_left = 387.0
offset_top = 38.0
offset_right = 767.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("5_oe7sd")
theme_override_font_sizes/font_size = 50
text = "Magnetic Field"
metadata/_edit_use_anchors_ = true

[node name="Theory" type="Label" parent="TheoryUI"]
offset_left = 62.0
offset_top = 126.0
offset_right = 1086.0
offset_bottom = 531.0
theme_override_fonts/font = ExtResource("5_oe7sd")
theme_override_font_sizes/font_size = 30
text = "If a charge q has a velocity v in a magnetic field  B, it experiences a 
force :



This force is thus perpendicular to the velocity and to the magnetic field

Now, use the arrows right/left to control the norm of the magnetic field 

Don't get out of the path !"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="TheoryUI"]
anchors_preset = -1
anchor_left = -0.103299
anchor_top = -0.0138889
anchor_right = -0.0755213
anchor_bottom = -0.00617284
offset_left = 506.0
offset_top = 182.0
offset_right = 779.0
offset_bottom = 256.0
texture = ExtResource("9_o0ljq")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="TheoryUI"]
offset_left = 475.0
offset_top = 537.0
offset_right = 652.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("5_oe7sd")
theme_override_font_sizes/font_size = 40
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="ProtonLev4" parent="." instance=ExtResource("10_su468")]
position = Vector2(-2, 5)

[connection signal="pressed" from="TheoryUI/PlayButton" to="." method="_on_play_button_pressed"]
